Fix loan image not showing on FireFox.

--- a/client/assets/stylesheets/app.scss
+++ b/client/assets/stylesheets/app.scss
@@ -73,7 +73,7 @@ $helpSectionWidth: 300px;
 
 .page-alert {
   position: fixed;
-  bottom: 10px;
+  bottom: 30px;
   right: 20px;
   z-index: 9999999;
   .alert {
